fix: cant not toggle on safari browser

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -192,3 +192,6 @@ body::-webkit-scrollbar {
     grid-template-rows: 1fr;
   }
 }
+.content::-webkit-scrollbar {
+  display: none;
+}
